migration to template engine. rework of layout for more space efficiency

--- a/translations/de.json
+++ b/translations/de.json
@@ -22,9 +22,5 @@
 	"NORTH_NORTH_WEST": "NNW",
 	"NORTH_MAX": "N",
 	"UVINDEX": "UV-Index",
-	"RAIN": "Regen",
-	"NOW": "Aktuell",
-	"TODAY": "Heute",
-	"WEEK": "Woche",
-	"MONTH": "Monat"
+	"RAIN": "Regen"
 }
